==Roadmap==

===LDCX TODO===
* Deployment on server (old FIOS server)
* Test cases for SMART + Edgar
* Finding and testing new datasets
* Comparison with related work
* Development plan for future work
* Documentation for paper

===Slicer TODO===
* Tracking usage

===TODO: Add new normalization algorithm part from spec===
* ...

===TODO: Improving catalog, schema handling===
* How do the different platforms define the data sources?

** Saiku: 1) By the connect string in saiku-datasources, e.g., jdbc:ld://olap4ld;Catalog=
LdCatalog;JdbcDrivers=com.mysql.jdbc.Driver;Server=http://public.b-kaempgen.de:8890/sparql;Database=
OPENVIRTUOSO;Datastructuredefinitions=http://fios:saiku,http://fios:saikumanually;Datasets=
http://fios:saiku,http://fios:saikumanually 2) By asking metadata queries and OLAP queries.

** Example_QB_Datasets_QueryTest.java: org.olap4j.RemoteXmlaTester.JdbcUrl=jdbc:ld://olap4ld;Catalog=
LdCatalog;JdbcDrivers=com.mysql.jdbc.Driver;Server=http://;Database=
EMBEDDEDSESAME;Datastructuredefinitions=;Datasets=;

** LDCX (xml-server): OlapDriverConnectionString, e.g., jdbc:ld://olap4ld;Catalog=LdCatalog;JdbcDrivers=
com.mysql.jdbc.Driver;Server=http://;Database=EMBEDDEDSESAME;Datastructuredefinitions=;Datasets=;
*** XMLA can restrict discover data sources with DataSourceName.

** Slicer (Linked Data Engine, directly):

How do we design to query linked data?
* Connect string is supposed to define and to setup (e.g., server url, datasets) the Linked Data Engine.
* setDatabase(String), setCatalog(String), setSchema(String) should all be doing the same thing, somehow 
define the datasource to query the metadata and the OLAP data from.
* I would say, we simply allow to define an arbitrary long, comma-separated string of datasets for setDatabase(String), setCatalog(String), setSchema(String).
* The good thing about deferrednamedlist would then be that list of cubes, dimensions, etc. are only queried on demand